Readded overflow to prevent issue but also width 100% to not have margin

--- a/css/int-style.css
+++ b/css/int-style.css
@@ -633,6 +633,8 @@ p a[target="_blank"]:after, a[target="_blank"]:after {
 
 .social-body p {
   text-overflow: ellipsis;
+  overflow: hidden;
+  width: 100%;
 }
 
 .social-date {
